Fixed spacing on header/footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header {
     position: relative;
     background: #ffffff;
     border-bottom: 1px solid #cccccc;
-    height: 67px;
+    height: 8%;
     width: 100%;
     position: fixed;
     top: 0;
@@ -83,7 +83,7 @@ a {
     clear: both;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 100px;
+    margin-top: 10%;
     background: #ffffff;
     padding: 20px;
     border: 1px solid #dddddd;
@@ -126,13 +126,14 @@ input {
     width: 100px;
     height: 40px;
     background-color: #4aaaa5;
+    color: white;
 }
 
 .portfolio_button {
     position: relative;
-    width: 150px;
-    height: 150px;
-    padding: 2.5%;
+    width: 15vw;
+    height: 15vw;
+    margin: 2.5%;
     background-color: blue;
     float: left;
 }
@@ -150,7 +151,7 @@ input {
     height: 20%;
     background-color: #4aaaa5;
     z-index: 2;
-    bottom: 10px;
+    bottom: 10%;
     right: 0px;
     text-align: center;
 }
@@ -167,4 +168,5 @@ footer {
     border-top: 10px solid #4aaaa5;
     text-align: center;
     font-size: 12px;
+    z-index: 100;
 }
